--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   "author": "harish gurjar",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.3.1",
     "mongoos": "^0.0.1-security",
+    "node": "^25.6.1",
     "nodemon": "^3.1.11"
   }
 }
