--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^7.3.8",
     "axios": "^1.13.5",
     "dotenv": "^17.3.1",
+    "framer-motion": "^12.34.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "swiper": "^12.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
