--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.13.5",
     "dotenv": "^17.3.1",
     "framer-motion": "^12.34.2",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "swiper": "^12.1.2"
